lustre/osp/osp_object.c
@@ -1417,6 +1417,7 @@ static int osp_create(const struct lu_env *env, struct dt_object *dt,
 	int			rc = 0;
 	struct lu_fid		*fid = &osi->osi_fid;
 	struct thandle		*local_th;
+	struct lu_fid		*last_fid = &d->opd_last_used_fid;
 	ENTRY;
 
 	if (is_only_remote_trans(th) &&
@@ -1496,8 +1497,13 @@ static int osp_create(const struct lu_env *env, struct dt_object *dt,
 
 	/* Only need update last_used oid file, seq file will only be update
 	 * during seq rollover */
+	if (fid_is_idif((last_fid)))
+		osi->osi_id = fid_idif_id(fid_seq(last_fid),
+					  fid_oid(last_fid), fid_ver(last_fid));
+	else
+		osi->osi_id = fid_oid(last_fid);
 	osp_objid_buf_prep(&osi->osi_lb, &osi->osi_off,
-			   &d->opd_last_used_fid.f_oid, d->opd_index);
+			   &osi->osi_id, d->opd_index);
 
 	rc = dt_record_write(env, d->opd_last_used_oid_file, &osi->osi_lb,
 			     &osi->osi_off, local_th);
